```plantuml
[plantuml,didtoolbox-webvh.puml.png,png]
----
@startuml

left to right direction
scale 2/3


class ch.admin.bj.swiyu.didtoolbox.Ed25519ProofOfPossessionJWSSignerImpl {
	{method} +supportedJWSAlgorithms () : java.util.Set
}


class ch.admin.bj.swiyu.didtoolbox.Ed25519VerificationMethodKeyProviderImpl {
	{field} #keyPair : java.security.KeyPair
	{field} #provider : java.security.Provider
	{method} +generateSignature ( param[B1 : [B ) : [B
	{method} +getVerificationKeyMultibase () : String
	{method} +isKeyMultibaseInSet ( paramSet1 : java.util.Set ) : boolean
	{method} ~verify ( param[B1 : [B , param[B2 : [B ) : boolean
	{method} ~writePrivateKeyAsPem ( paramFile1 : java.io.File ) : void
	{method} +writePublicKeyAsPem ( paramFile1 : java.io.File ) : void
}


class ch.admin.bj.swiyu.didtoolbox.JCSHasher {
}


class ch.admin.bj.swiyu.didtoolbox.Main {
	{field} ~help : boolean
	{field} ~version : boolean
}


class ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionCreator {
	{method} +create ( paramString1 : String , paramDuration2 : java.time.Duration ) : com.nimbusds.jwt.SignedJWT
}


interface ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionJWSSigner {
	{method} +getJCAContext () : com.nimbusds.jose.jca.JCAContext
	{method} +sign ( paramJWSHeader1 : com.nimbusds.jose.JWSHeader , param[B2 : [B ) : com.nimbusds.jose.util.Base64URL
}


class ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionVerifier {
	{field} -updateKeys : java.util.Set
	{method} +isValid ( paramSignedJWT1 : com.nimbusds.jwt.SignedJWT , paramString2 : String ) : boolean
	{method} +verify ( paramSignedJWT1 : com.nimbusds.jwt.SignedJWT , paramString2 : String ) : void
}


interface ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider {
	{method}  {abstract} +generateSignature ( param[B1 : [B ) : [B
	{method}  {abstract} +getVerificationKeyMultibase () : String
	{method}  {abstract} +isKeyMultibaseInSet ( paramSet1 : java.util.Set ) : boolean
}


class ch.admin.bj.swiyu.didtoolbox.context.DidLogCreatorContext {
	{field} -assertionMethodKeys : java.util.Map
	{field} -authenticationKeys : java.util.Map
	{field} -forceOverwrite : boolean
	{field} -nextKeys : java.util.Set
	{field} -updateKeys : java.util.Set
	{method} +create ( paramURL1 : java.net.URL ) : String
	{method} ~create ( paramURL1 : java.net.URL , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


interface ch.admin.bj.swiyu.didtoolbox.context.DidLogCreatorStrategy {
	{method}  {abstract} +createDidLog ( paramURL1 : java.net.URL ) : String
	{method}  {abstract} +createDidLog ( paramURL1 : java.net.URL , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


class ch.admin.bj.swiyu.didtoolbox.context.DidLogDeactivatorContext {
	{method} +deactivate ( paramString1 : String ) : String
	{method} +deactivate ( paramFile1 : java.io.File ) : String
	{method} ~deactivate ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


interface ch.admin.bj.swiyu.didtoolbox.context.DidLogDeactivatorStrategy {
	{method}  {abstract} +deactivateDidLog ( paramString1 : String ) : String
	{method}  {abstract} +deactivateDidLog ( paramFile1 : java.io.File ) : String
	{method}  {abstract} +deactivateDidLog ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


class ch.admin.bj.swiyu.didtoolbox.context.DidLogUpdaterContext {
	{field} -assertionMethodKeys : java.util.Map
	{field} -authenticationKeys : java.util.Map
	{field} -nextKeys : java.util.Set
	{field} -updateKeys : java.util.Set
	{method} +update ( paramString1 : String ) : String
	{method} +update ( paramFile1 : java.io.File ) : String
	{method} ~update ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


interface ch.admin.bj.swiyu.didtoolbox.context.DidLogUpdaterStrategy {
	{method}  {abstract} +updateDidLog ( paramString1 : String ) : String
	{method}  {abstract} +updateDidLog ( paramFile1 : java.io.File ) : String
	{method}  {abstract} +updateDidLog ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}


class ch.admin.bj.swiyu.didtoolbox.jcommander.VerificationMethodParameters {
	{field} +jwk : String
	{field} +key : String
}


class ch.admin.bj.swiyu.didtoolbox.model.DidLogMeta {
	{field} -dateTime : String
	{field} -didDoc : ch.admin.eid.did_sidekicks.DidDoc
	{field} -lastVersionId : String
	{field} ~lastVersionNumber : int
	{method} +arePreRotatedUpdateKeys ( paramSet1 : java.util.Set ) : boolean
	{method} +isKeyPreRotationActivated () : boolean
	{method} +isPreRotatedUpdateKey ( paramString1 : String ) : boolean
}


enum ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum {
	{field} +TDW_0_3
	{field} +WEBVH_1_0
}


class ch.admin.bj.swiyu.didtoolbox.model.NamedDidMethodParameters {
	{field} +deactivated : Boolean
	{field} ~method : String
	{field} +nextKeyHashes : java.util.Set
	{field} ~scid : String
	{field} +updateKeys : java.util.Set
	{method} +getDidMethodEnum () : ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum
}


class ch.admin.bj.swiyu.didtoolbox.model.WebVerifiableHistoryDidLogMetaPeeker {
}


class ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryCreator {
	{field} -assertionMethodKeys : java.util.Map
	{field} -authenticationKeys : java.util.Map
	{field} -forceOverwrite : boolean
	{field} -nextKeys : java.util.Set
	{field} -updateKeys : java.util.Set
	{method} +createDidLog ( paramURL1 : java.net.URL ) : String
	{method} +createDidLog ( paramURL1 : java.net.URL , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
	{method} #getDidMethod () : ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum
}


class ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryDeactivator {
	{method} +deactivateDidLog ( paramString1 : String ) : String
	{method} +deactivateDidLog ( paramFile1 : java.io.File ) : String
	{method} +deactivateDidLog ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
	{method} #getDidMethod () : ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum
}


class ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryUpdater {
	{field} -assertionMethodKeys : java.util.Map
	{field} -authenticationKeys : java.util.Map
	{field} -nextUpdateKeys : java.util.Set
	{field} -updateKeys : java.util.Set
	{method} -buildDidMethodParameters () : com.google.gson.JsonObject
	{method} #getDidMethod () : ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum
	{method} -loadNextUpdateKeys () : java.util.Set
	{method} -loadUpdateKeys () : java.util.Set
	{method} +updateDidLog ( paramString1 : String ) : String
	{method} +updateDidLog ( paramFile1 : java.io.File ) : String
	{method} +updateDidLog ( paramString1 : String , paramZonedDateTime2 : java.time.ZonedDateTime ) : String
}




ch.admin.bj.swiyu.didtoolbox.Ed25519ProofOfPossessionJWSSignerImpl --|>  ch.admin.bj.swiyu.didtoolbox.Ed25519VerificationMethodKeyProviderImpl
ch.admin.bj.swiyu.didtoolbox.Ed25519ProofOfPossessionJWSSignerImpl ..|>  ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionJWSSigner
ch.admin.bj.swiyu.didtoolbox.Ed25519VerificationMethodKeyProviderImpl ..|>  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionCreator *--  ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionJWSSigner : signer
ch.admin.bj.swiyu.didtoolbox.ProofOfPossessionJWSSigner ..|>  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.context.DidLogCreatorContext -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.context.DidLogCreatorContext -->  ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum : didMethod
ch.admin.bj.swiyu.didtoolbox.context.DidLogDeactivatorContext -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.context.DidLogDeactivatorContext -->  ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum : didMethod
ch.admin.bj.swiyu.didtoolbox.context.DidLogUpdaterContext -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.context.DidLogUpdaterContext -->  ch.admin.bj.swiyu.didtoolbox.model.DidMethodEnum : didMethod
ch.admin.bj.swiyu.didtoolbox.model.DidLogMeta -->  ch.admin.bj.swiyu.didtoolbox.model.NamedDidMethodParameters : params
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryCreator -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryCreator ..|>  ch.admin.bj.swiyu.didtoolbox.context.DidLogCreatorStrategy
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryDeactivator -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryDeactivator ..|>  ch.admin.bj.swiyu.didtoolbox.context.DidLogDeactivatorStrategy
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryUpdater -->  ch.admin.bj.swiyu.didtoolbox.VerificationMethodKeyProvider : verificationMethodKeyProvider
ch.admin.bj.swiyu.didtoolbox.webvh.WebVerifiableHistoryUpdater ..|>  ch.admin.bj.swiyu.didtoolbox.context.DidLogUpdaterStrategy


@enduml
----
```
